--- a/README.org
+++ b/README.org
@@ -19,3 +19,8 @@ sh ./src/main.sh
 #+BEGIN_SRC bash
 sh ./scripts/mongosh.sh
 #+END_SRC
+
+Запуск c помощью docker-compose (запускает БД и бота в фоне, выдаёт stdout бота на выводе, для остановки ~docker-compose down~)
+#+BEGIN_SRC bash
+sh ./scripts/docker.sh
+#+END_SRC
